@@ -445,6 +445,7 @@ void showBarberPole(const char* title);
 void killBarberPole(void);
 void debugFree(gpointer ptr,const char* message);
 char* truncateWithElipses(char* str,unsigned int maxlen);
+GSList* loadList(char* filepath,GtkComboBoxText* dropbox);
 
 #endif
 
